# crewai-train

./: README.md  pyproject.toml  training_data.pkl
src/clasificado/: .env  crew.py  main.py
src/clasificado/config/: agents.yaml  tasks.yaml
src/clasificado/tools/: custom_tool.py
