[project]
name = "clasificado"
version = "0.1.0"
description = "clasificado using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
clasificado = "clasificado.main:run"
run_crew = "clasificado.main:run"
train = "clasificado.main:train"
replay = "clasificado.main:replay"
test = "clasificado.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
